--- a/style.css
+++ b/style.css
@@ -6,15 +6,115 @@
     list-style-type: none;
     box-sizing: border-box;
 }
+body{
+    background-color: rgb(155, 31, 45);
+}
 nav{
     display: flex;
     width: 100%;
     height: 70px;
     background-color: rgb(106, 14, 23);
     align-items: center;
-    justify-content:space-between ;
+    justify-content:flex-start ;
+    gap: 40%;
     padding: 30px  5px ;
     position: fixed;
-     flex-direction:row-reverse ;
 }
+nav img{
+    height:25px ;
+    width: 25px;
+    border-radius: 5%;
+}
+nav div{
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+}
+nav ul {
+    display: flex;
+    align-items:center;
+    justify-content: space-evenly;
+    gap: 40%;
+    
+}
+nav ul li a{
+    color:black;
+}
+.presentationtoourrestaurant {
+    padding-top: 70px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction:column ;
+    gap: 10px;
+
+
+}
+
+.presentationtoourrestaurant img.gal2{
+   
+    border-radius: 25%;
+    width: 20%;
+    height: 5%;
+}
+.informationsaboutourstaff img {
+    border-radius: 25%;
+    width: 20%;
+    height:5%;
+}
+
+.informationsaboutourstaff{
+    padding-top: 70px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction:column ;
+    gap: 10px;
+}
+.themenu{
+    padding-top: 10px;
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   flex-direction: column;
+   gap: 20px;
+}
+.grid-container{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    gap:15px;
+    border: 10px;
+}
+.contact{
+    display: flex;
+    align-items: center;
+    justify-content:center ;
+    flex-direction: column;
+    gap: 20px;
+}
+.contact form{
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+}
+nav:hover{
+    cursor:pointer;
+    background-color: rgb(130, 114, 35);
+}
+.contact button:hover{
+    background-color:orangered;
+
+}
+footer{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: black;
+    gap: 15px;
+    padding-top: 20px;
+}
+footer:hover{
+    color: antiquewhite;
+}
+
 
